--- a/CNN.tex
+++ b/CNN.tex
@@ -94,7 +94,7 @@ For each convolutional layer you can choose padding and stride, however, we reco
 
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.75\textwidth]{imgplot.png}
+        \includegraphics[width=0.75\textwidth]{images/imgplot.png}
         \caption{Plot showing one image for class of CIFAR10 dataset}
         \label{fig:imgplot}
     \end{figure}
@@ -103,14 +103,14 @@ For each convolutional layer you can choose padding and stride, however, we reco
 
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.75\textwidth]{trainingHG.png}
+        \includegraphics[width=0.75\textwidth]{images/trainingHG.png}
         \caption{Histogram of the distribution of images into classes of the training dataset}
         \label{fig:trainHG}
     \end{figure}
 
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.75\textwidth]{testHG.png}
+        \includegraphics[width=0.75\textwidth]{images/testHG.png}
         \caption{Histogram of the distribution of images into classes of the test dataset}
         \label{fig:testHG}
     \end{figure}
@@ -182,7 +182,7 @@ My model is defined as follows:
 
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.75\textwidth]{Unknown-4.png}
+        \includegraphics[width=0.75\textwidth]{images/Unknown-4.png}
         \caption{Plot showing the loss evolution between training set and evauation set}
         \label{fig:lossplot}
     \end{figure}
@@ -209,7 +209,7 @@ Another difference with the old model is that \texttt{stride=1}, where the strid
 
         \begin{figure}[h]
             \centering
-            \includegraphics[width=0.75\textwidth]{transformations.png}
+            \includegraphics[width=0.75\textwidth]{images/transformations.png}
             \caption{Different transformation applied to perform data augmentation. Examples taken from \href{https://pytorch.org/vision/main/auto_examples/transforms/plot_transforms_illustrations.html#sphx-glr-auto-examples-transforms-plot-transforms-illustrations-py}{pytorch documentation}}
             \label{fig:transf}
         \end{figure}
@@ -228,7 +228,7 @@ Another difference with the old model is that \texttt{stride=1}, where the strid
 
         \begin{figure}[h]
             \centering
-            \includegraphics[width=0.75\textwidth]{epoch.png}
+            \includegraphics[width=0.75\textwidth]{images/epoch.png}
             \caption{Evolution of evaluation and trainig loss, as well as evolution of accuracy related to increase of epochs with batch size 32. \textit{Please note that the label "step" here refers to epochs. }}
             \label{fig:epoch}
         \end{figure}
